# csvstrict

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  README.zh.md
docs/: diagnostics.md
examples/: README.md  bigquery-traps.csv  broken.csv  clean.csv  excel-traps.csv  postgres-traps.csv
scripts/: smoke.sh
src/: bigquery.rs  cli.rs  codes.rs  diag.rs  excel.rs  lib.rs  main.rs  postgres.rs  profile.rs  report.rs  rules.rs  scan.rs
tests/: cli.rs
